js infinite scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Title-->
     <h1>UNSPLASH - INFINITE SCROLL</h1>
     <!--Loader-->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loader"></img>
     </div>
     <!--Image Container-->
